[package]
name = "falcon-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
falcon-client = { git = "https://github.com/corvus-labs-io/falcon-client" }
solana-sdk = "2"
solana-rpc-client = "2"
tokio = { version = "1", features = ["full"] }
uuid = "1"
dotenvy = "0.15"
anyhow = "1"
quinn = "0.11.6"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
